# windows-fonts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: check-version.py
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml
python/windows_fonts/: __init__.py  _windows_fonts.pyi
src/: enums.rs  errors.rs  lib.rs
tests/: test_collection.py  test_enums.py  test_family.py  test_variant.py
